fix: 1차 코드리뷰 pr 피드백 반영 & feat: 출근 기능 개발