@@ -2,8 +2,8 @@ package me.sungbin.domain.team.service;
 
 import lombok.RequiredArgsConstructor;
 import me.sungbin.domain.team.entity.Team;
-import me.sungbin.domain.team.model.request.RegisterTeamRequestDto;
-import me.sungbin.domain.team.model.response.FindTeamInfoResponseDto;
+import me.sungbin.domain.team.model.request.RegistrationTeamRequestDto;
+import me.sungbin.domain.team.model.response.TeamInfoResponseDto;
 import me.sungbin.domain.team.repository.TeamRepository;
 import me.sungbin.global.exception.custom.TeamAlreadyExistsException;
 import org.springframework.stereotype.Service;
@@ -32,7 +32,7 @@ public class TeamService {
     private final TeamRepository teamRepository;
 
     @Transactional
-    public void registerTeam(RegisterTeamRequestDto requestDto) {
+    public void registerTeam(RegistrationTeamRequestDto requestDto) {
         validateTeam(requestDto); // 유효성 검사
 
         Team team = requestDto.toEntity(); // dto to entity
@@ -40,19 +40,17 @@ public class TeamService {
         this.teamRepository.save(team);
     }
 
-    public List<FindTeamInfoResponseDto> findTeamInfo() {
+    public List<TeamInfoResponseDto> findTeamInfo() {
         List<Team> teams = this.teamRepository.findAll();
 
-        return teams.stream()
-                .map(FindTeamInfoResponseDto::new)
-                .collect(Collectors.toList());
+        return teams.stream().map(TeamInfoResponseDto::new).toList();
     }
 
     /**
      * 팀 유효성 검사
      * @param requestDto
      */
-    private void validateTeam(RegisterTeamRequestDto requestDto) {
+    private void validateTeam(RegistrationTeamRequestDto requestDto) {
         if (this.teamRepository.existsByName(requestDto.name())) {
             throw new TeamAlreadyExistsException("이미 존재하는 팀 이름입니다.");
         }
